# BItemplate

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
.claude/: config.json
.claude-plugin/: marketplace.json
.claude-plugin/plugins/bioinformatics-experiment/: PLUGIN.md
.claude-plugin/plugins/bioinformatics-experiment/skills/bioinformatics-experiment/references/: workflow-exp-plan.md
.claude/commands/: exp-clarify.md  exp-plan.md  exp-report.md  exp-update-labnote.md
.claude/skills/bioinformatics-experiment/: SKILL.md
.claude/skills/bioinformatics-experiment/assets/: lab-report.md  labnote.md
.claude/skills/bioinformatics-experiment/references/: workflow-exp-clarify.md  workflow-exp-plan.md  workflow-exp-report.md  workflow-exp-update-labnote.md
.claude/templates/: analysis.md  config.yaml  labnote.md
.docs/: getting-started.md
notebook/labnote/: 20251101_squidiff-testing.md  Exp01_rnaseq-qc.md
notebook/report/: 20251101_squidiff-validation-lab-report.md
