[project]
name = "bioinformatics-experiment"
version = "0.1.0"
description = "Bioinformatics analysis project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["src"]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

# ========================================
# Project-specific configuration
# ========================================

[tool.bioinfo-experiment]
description = "Configuration for bioinformatics experiment workflow"

[tool.bioinfo-experiment.compute]
# Server specifications (128-core, 512GB RAM server)
total_cores = 128
total_memory_gb = 512

# Default resource allocation (70% of total capacity)
default_cores = 90        # 128 * 0.7 H 90
default_memory_gb = 358   # 512 * 0.7 H 358

# Resource usage note:
# Experiments use 70% of server capacity by default to leave headroom
# Override per-experiment in config/YYYYMMDD_Exp##_*.yaml if needed

[tool.bioinfo-experiment.paths]
data_root = "data"
raw_data = "data/raw"
results_root = "results"

[tool.bioinfo-experiment.references]
# genome = "/path/to/reference/GRCh38.fa"
# annotation = "/path/to/gencode.v42.annotation.gtf"
# dbsnp = "/path/to/dbsnp.vcf.gz"

[tool.bioinfo-experiment.tools]
quality_threshold = 20
min_coverage = 10

[tool.bioinfo-experiment.conventions]
experiment_prefix = "Exp"
date_format = "YYYY-MM-DD"
filename_format = "YYYYMMDD_Exp##_description"
